<resources>
    <string name="app_name">无线调试</string>

    <string name="action_adb_wifi_root">无线调试 (需要Root权限🚀)</string>
    <string name="action_settings">设置⚙️</string>
    <string name="action_about">关于应用🦥</string>

    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>

    <string name="double_click_exit">连按两次退出🛸</string>

    <string name="adb_connect_message">已开启无线调试 %1$S:%2$s ✈️</string>
    <string name="adb_disconnect_message">未开启无线调试 ✂️</string>

    <string name="not_connected_wifi">未连接到 WiFi 网络 📡</string>

    <string name="adb_wifi_turned_on">无线调试开启</string>
    <string name="adb_wifi_turned_off">无线调试关闭</string>

    <string name="no_root_privileges_granted">未授予root权限 🚨</string>

    <string name="preference_category_title_general">通用设置</string>
    <string name="preference_category_title_system">设备相关</string>
    <string name="preference_port_title">端口</string>
    <string name="preference_port_summary">指定无线调试端口</string>
    <string name="preference_reboot_title">重启</string>
    <string name="preference_reboot_summary">点击后手机将重启</string>
    <string name="preference_power_off_title">关机</string>
    <string name="preference_power_off_summary">点击后手机将关机</string>
    <string name="preference_soft_reboot_title">软重启</string>
    <string name="preference_soft_reboot_summary">点击后手机将软重启</string>
    <string name="preference_key_port" translatable="false">port_pref_keys</string>
    <string name="preference_key_reboot" translatable="false">reboot_pref_keys</string>
    <string name="preference_key_power_off" translatable="false">power_off_pref_keys</string>
    <string name="preference_key_soft_reboot" translatable="false">soft_reboot_pref_keys</string>

    <string name="save_port_success">"保存成功，端口: %1$s，重新开启生效"</string>
    <string name="save_port_failed">"保存失败，请检查输入"</string>

    <string name="shortcut_action_adb_wifi" translatable="false">top.i97.adbwifi.action.adbwifi</string>
    <string name="shortcut_action_setting" translatable="false">top.i97.adbwifi.action.settings</string>
    <string name="shortcut_action_about" translatable="false">top.i97.adbwifi.action.about</string>

    <string name="about_author">\@plain-dev</string>
    <string name="about_website">https://plain-dev.com</string>
    <string name="about_email">plaindev@88.com</string>

    <string name="using_help">使用本工具🔧开启无线调试后，请在电脑💻终端中运行以下命令连接设备\n\n
       🔗连接设备: adb connect [IP]:[PORT] \n
        📱查看已连接设备列表: adb devices\n
        ✂️断开连接: adb disconnect [IP]:[PORT]\n\n
        ⚠️本软件需要Root权限，授予权限才能正常使用⚠️
    </string>

</resources>